# amazon-kdp-navigator

./: .gitignore  CLAUDE.md  Enterprise_SDLC_Learning_Plan.docx  KDP_Navigator_PRD.docx  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/backend/: app.py  config.py  database.py
backend/src/backend/models/: __init__.py  agent.py  base.py  manuscript.py  otp.py  senior.py
backend/src/backend/routers/: agent_auth.py  auth.py
backend/src/backend/schemas/: agent_auth.py
backend/src/backend/services/: agent_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: StatusStepper.tsx
frontend/src/pages/: AgentDashboard.tsx  AgentLoginPage.tsx  CoverPreviewPage.tsx  EmailLoginPage.tsx  HomePage.tsx  LoginPage.tsx  ManuscriptReviewPage.tsx  MetadataReviewPage.tsx  OTPVerificationPage.tsx  OnboardingFormPage.tsx  PipelinePage.tsx  StatusPage.tsx  WritingPage.tsx
