[project]
name = "backend"
version = "0.1.0"
description = "Amazon KDP Navigator — backend API"
readme = "README.md"
authors = [
    { email = "makoto.sugano@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
